WTFString::show doesn't dump non-ASCII characters in a readable manner https://bugs.webkit.org/show_bug.cgi?id=96749

Patch by Glenn Adams <glenn@skynav.com> on 2012-09-14
Reviewed by Benjamin Poulain.

Dump non-ASCII characters in a useful form for debugging.

* wtf/text/WTFString.cpp:
(asciiDebug):
Dump non-ASCII characters (i.e., UTF-16 code elements) as well as non-printable ASCII characters
using \uXXXX format.

Canonical link: https://commits.webkit.org/114768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128682 268f45cc-cd09-0410-ab3c-d52691b4dbfc